--- a/views/checkedout_loan.jade
+++ b/views/checkedout_loan.jade
@@ -32,6 +32,6 @@ block content
                 td #{each.return_by}
                 td 
                 td
-                    a.button(href='/book/return/'+each.Book.id) Return Book
+                    a.button(href='/book/return/'+each.id) Return Book
                 tr
             
