--- a/views/show_book.jade
+++ b/views/show_book.jade
@@ -38,14 +38,14 @@ block content
             a(href='/book/'+book.id) #{book.title}
           td
             a(href='/patron/'+rowItem.Patron.id) #{rowItem.Patron.first_name} #{rowItem.Patron.last_name}
-          td #{rowItem.loaned_on}
-          td #{rowItem.return_by}
+          td #{moment(rowItem.loaned_on).format('YYYY-MM-DD')}
+          td #{moment(rowItem.return_by).format('YYYY-MM-DD')}
           td 
             if (!rowItem.returned_on)
              p null
             else
-             p #{rowItem.returned_on}
+             p #{moment(rowItem.returned_on).format('YYYY-MM-DD')}
           td
             if (!rowItem.returned_on)
-             a.button(href='/book/return/'+book.id) Return Book
+             a.button(href='/book/return/'+rowItem.id) Return Book
 
