--- a/views/show_patron.jade
+++ b/views/show_patron.jade
@@ -56,7 +56,7 @@ block content
             p #{rowItem.dataValues.returned_on}
           td  
            if (!rowItem.dataValues.returned_on)
-            a.button(href='/book/return/'+rowItem.dataValues.Book.dataValues.id) Return Book
+            a.button(href='/book/return/'+rowItem.id) Return Book
           
         
           
