fixed return_book.pug moment depreciation warning

--- a/views/overdue_loan.pug
+++ b/views/overdue_loan.pug
@@ -34,5 +34,5 @@ block content
           td #{each.return_by}
           td 
           td
-            a.button(href='/book/return/'+ each.Book.id) Return Book
+            a.button(href='/book/return/'+ each.id) Return Book
        
