changed null to not returned yet

--- a/views/show_book.pug
+++ b/views/show_book.pug
@@ -43,7 +43,7 @@ block content
           td #{rowItem.return_by}
           td 
             if (!rowItem.returned_on)
-             p null
+             p Not Returned Yet
             else
              p #{rowItem.returned_on}
           td
